src/objects/Message__c.object
<CustomObject>
    <customHelpPage>MessageHelp</customHelpPage>
    <fields>
        <fullName>Exception__c</fullName>
        <inlineHelpText>If the process threw an exception when handling this message, what was the error text?</inlineHelpText>
        <label>Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsOverdue__c</fullName>
        <formula>NOW() &gt; LastModifiedDate + (1/24) /* Shows messages not processed within one hour */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this message stalled or otherwise not processing correctly?</inlineHelpText>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <inlineHelpText>What is the JSON object representing the parameters carried by this message?</inlineHelpText>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What Process will handle this message?</inlineHelpText>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which Sequence is this message progressing through?</inlineHelpText>
        <label>Sequence</label>
        <referenceTo>Sequence__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>What stage of its lifecycle is this message at?</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Buffer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reprocess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which Step is this message destined for?</inlineHelpText>
        <label>Step</label>
        <referenceTo>Step__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Exception__c</columns>
        <columns>Sequence__c</columns>
        <columns>Process__c</columns>
        <columns>IsOverdue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Overdue</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Exception__c</columns>
        <columns>Sequence__c</columns>
        <columns>Process__c</columns>
        <columns>IsOverdue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsOverdue__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Overdue</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000000000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>